--- a/literature.bib
+++ b/literature.bib
@@ -505,6 +505,15 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   eprint  = {https://www.nngroup.com/articles/response-times-3-important-limits/},
 }
 
+@InProceedings{Lion2022,
+  author    = {Lion, David and Chiu, Adrian and Stumm, Michael and Yuan, Ding},
+  booktitle = {2022 USENIX Annual Technical Conference (USENIX ATC 22)},
+  title     = {Investigating Managed Language Runtime Performance: Why $\{$JavaScript$\}$ and Python are 8x and 29x slower than C++, yet Java and Go can be Faster?},
+  year      = {2022},
+  pages     = {835--852},
+  eprint    = {https://www.usenix.org/conference/atc22/presentation/lion},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
