--- a/txt/7-evaluation.tex
+++ b/txt/7-evaluation.tex
@@ -16,29 +16,31 @@ Specifically, the protocol must ensure that the data owner can always access its
 The data owner must also be able to share and revoke access to logs.
 Please see section~\ref{functional-requriements} for details about those functional requirements.
 
-The protocol requires the following actions:
+To ensure that data owner can always access logs the protocol relies on three mechanisms:
 First, the monitor must encrypt a new log only for the data owner.
 A log is therefore accessible for the data owner upon creation.
 Second, whenever the data owner shares or revokes access to a log it must include its own identity in the set of authorized users.
-The server must ensure that no other user besides the specified data owner modifies the log.
-This construction ensures that the data owner is always able to download and decrypt its logs.
+Finally, the server must ensure that no other user besides the data owner can modify logs.
+Since no unauthorized users can tamper a log this guarantees that that the data owner is always able to download and decrypt its logs.
 
 The protocol is based on hybrid encryption.
-This means that the log is encrypted with a symmetric encryption scheme.
+This means that the log is first encrypted with a symmetric encryption scheme.
 The used symmetric key is then encrypted for each intended recipient.
 Those encrypted keys are attached to the encrypted log.
 This allows the construction of logs that can be decrypted by multiple users.
-Hence, a data owner can re-encrypt the log for a specific set of users.
-The re-encryption requires the data owner to apply the encryption algorithm to the log.
-The provided metadata allows the server to distribute logs to requesting users because it contains the set of intended receivers.
+Hence, a data owner can re-encrypt the log for a specific set of users by applying the encryption algorithm.
+The specified metadata allows the server to distribute logs to requesting users because it contains the set of intended receivers.
 Moreover, the server can ensure that only the specified data owner can update a log.
 This effectively enables the functionality to share and revoke access to the log.
+Sharing a log is realized by adding additional users to the set of authorized users.
+Revoking the access to logs requires to remove a user from this set.
+Since new key material is generated during encryption, revoked users can not re-use older decryption keys to access the log.
 
 This analysis shows that the designed protocol fulfills all identified functional requirements.
 A data owner can always access its logs and it can share and revoke access to them.
 The protocol was included in the existing toolchain within the scope of the master thesis.
-Section \ref{sec:toolchain-modifications} investigates those changes.
-This implementation verifies that the protocol has the intended functionality and can be used in practice.
+Section \ref{sec:toolchain-modifications} investigates the implemented changes.
+This integration verifies that the protocol has the intended functionality and can be used in practice.
 Moreover, the implemented libraries are heavily tested.
 This creates further confidence in their functionality.
 
@@ -46,7 +48,7 @@ This creates further confidence in their functionality.
 \label{sec:evaluation-sec}
 
 This section investigates the security of the designed protocol.
-During requirements engineering, three security requirements were identified (details in section ~\ref{security-requriements}).
+Three security requirements were identified during requirements engineering (details in section ~\ref{security-requriements}).
 Each requirement was motivated by an exemplary attack scenario.
 The following sections face the proposed protocol with those attacks.
 They argue why the established security mechanisms resist them.
@@ -62,14 +64,17 @@ If any of those assumptions is broken the protocol must be considered to be inse
     The PKI assigns the identities of users to their public keys via certificates.
     Each user requires two key pairs (one for encrypting data and one for signing data).
     Each user must has exclusive access to his private keys.
-    If any other user (or a trusted server) knows a private key of any user the intended E2EE is broken.
+    The public keys are distributed via certificates which are signed by a trusted certificate authority.
+    If any private key (either of a user or of the certificate authority) is compromised the intended E2EE is broken.
+    A private key is assumed to be compromised if any entity besides the owner of the private key has access to it.
+    
     \item 
     The JOSE standard provides secure encryption and signing algorithms.
     Specifically, \verb|A256GCM| and \verb|ECDH-ES+A256KW| must be secure encryption algorithms and \verb|ES256| must be a secure signing algorithm.
     This implies that it is computationally infeasible to break those algorithms without knowing the respective keys~\cite{Katz2020}.
     \item 
     The libraries implemented in this thesis rely on language-specific JOSE implementations (details in~\ref{sec:implemented-libraries}).
-    It is crucial for the security of the protocol that those libraries follow the definitions of the JOSE protocol.
+    It is crucial for the security of the protocol that those libraries follow the specifications and definitions of the JOSE protocol.
 \end{enumerate}
 
 \subsection{Curious server}
@@ -80,14 +85,26 @@ This section argues why Eve can not access logs if he was not explicitly authori
 
 The protocol enforces that only encrypted data is stored in the database.
 Both, the monitor creating a log and the data owner sharing a log must encrypt the data before sending it to the server.
-The server has access to the \emph{JWE} token created by the encryption algorithm.
+The server only has access to the \emph{JWE} token created by the encryption algorithm.
 This \emph{JWE} token relies on hybrid encryption:
-First of all, a symmetric key $k$ is randomly generated and the data is encrypted via \verb|A256GCM|.
+First, a symmetric key $k$ is randomly generated and the data is encrypted via \verb|A256GCM|.
 This is an authenticated symmetric encryption algorithm based on \emph{AES}~\cite{Jones2015}.
 Secondly, this symmetric key $k$ is encrypted for each receiver using \verb|ECDH-ES+A256KW|~\cite{Jones2015}.
-This algorithm establishes an ephemeral key between two users.
+This key wrapping algorithm establishes an ephemeral key between two users.
 This ephemeral key is finally used to encrypt the symmetric key $k$.
-The specification of \verb|ECDH-ES+A256KW| requires the following steps to establish the ephemeral key between a sender and receiver~\cite[100]{Barker2017}:
+The specification of \verb|ECDH-ES+A256KW| requires the following steps to establish this ephemeral key between a sender and receiver~\cite[100]{Barker2017}.
+This is also illustrated in figure~\ref{fig:key_wrapping}.
+
+\begin{figure}[ht]
+    \includegraphics[scale=0.2]{../img/07/key_wrapping.jpg}
+    \centering
+    \caption[Key wrapping]{
+        Key wrapping of the symmetric key k using ECDH-ES+A256KW. 
+        Based on the exchanged public keys the sender and receiver can both compute the same shared secret.
+        The derived ephemeral key is finally used to decrypt the symmetric encryption key k.}
+    \label{fig:key_wrapping}
+\end{figure}
+
 \begin{enumerate}
     \item 
     The sender must know the static public key of the receiver. 
@@ -98,8 +115,8 @@ The specification of \verb|ECDH-ES+A256KW| requires the following steps to estab
     The sender creates a new ephemeral key pair. 
     This key pair must be used only once.
     \item 
-    The sender sends the public key of the ephemeral key pair to the receiver.
-    In our case, this data is included within the encrypted key.
+    The sender sends the ephemeral public key of to the receiver.
+    In our case, the key is encoded into the \emph{JWE} token.
     The ephemeral private key must be kept secret.
     \item 
     The sender knows the static public key of the receiver and the ephemeral private key of the sender.
@@ -119,7 +136,7 @@ Eve can compute an ephemeral key only if he has access to either the ephemeral p
 However, those private keys must be kept secret.
 If Eve wants to decrypt the log he must either break the encryption algorithms or access a private key.
 This, however, contradicts the assumptions.
-If Eve can break an encryption algorithm it is not secure.
+If Eve can break the encryption the used encryption algorithm it is not secure.
 If Eve can access a private key of a user the PKI is not secure.
 This leads to the conclusion that the malicious database admin Eve can not access decrypted logs.
 Only if he was explicitly authorized he can restore the symmetric key $k$ which allows the decryption of a log.
@@ -134,12 +151,12 @@ Alice shares a log with Eve.
 This implies that Eve has access to the decrypted data.
 Eve, however, does not stick to the protocol and encrypts the received log for Bob.
 Bob must be able to detect this fraud because the log he received was not encrypted by the data owner (Alice).
-This section argues why this attack can be detected.
+This section argues why the designed protocol can detect this attack.
 
-The mechanism implemented in the protocol to defend against this attack is the shared log.
-It is a \emph(JWS) token that is signed by the creator of the log.
-It is illustrated in figure~\ref{fig:nested-jws}.
-It contains the log as a nested \emph{JWS} token.
+The construction introduced to defend against this attack is the shared log.
+It is a \emph{JWS} token that is signed by the creator of the log.
+For details see the visualization in figure~\ref{fig:nested-jws}.
+A shared log contains the log as a nested \emph{JWS} token.
 Moreover, it contains the identity of the creator and the identities of the intended receivers.
 Whenever a user successfully decrypted a log, it must verify that the shared log is a valid data structure.
 This requires the following checks:
@@ -152,7 +169,7 @@ If the signature is valid the receiver can be sure that the log was signed by th
 The receiver then needs to check if the creator is the data owner. 
 This is achieved by checking if the identity of the creator (shared log) is equal to the identity of the data owner in the nested log.
 If this holds and if the log was indeed signed by a valid monitor the receiver can be sure that the data owner created and signed the shared log.
-This, however, does not pretend surreptitious forwarding.
+This, however, does not prevent surreptitious forwarding.
 \item 
 In a third step, the receiver must verify if his identity is specified in the list of intended receivers (shared log).
 If this is true the receiver knows that the data owner intentionally shared the log with him or her.
@@ -169,16 +186,16 @@ Thus, the shared log is only valid if the data owner has shared the signed log.
 Eve has two options to forward an encrypted log to the unintended receiver Bob. 
 \begin{itemize}
     \item 
-    Eve could manipulate the identity of the data owner.
+    He could manipulate the identity of the data owner.
     If he manages to change the identity of the data owner to its own identity he could correctly sign the shared log.
     This modification, however, makes his attack pointless.
     Eve does not want to introduce faked logs.
     He wants to forward existing logs to unintended receivers.
     Please also note that this requires Eve to be a valid monitor because only they are allowed to sign logs.
     \item 
-    Eve could try to forge a signature of the data owner Alice.
+    He could try to forge a signature of the data owner Alice.
     This does not require him to modify the log.
-    Rather, Eve creates a shared log that includes Bob as a valid receiver.
+    Rather, Eve keeps the existing log and creates a shared log that includes Bob as a valid receiver.
     He also specifies Alice as the creator of the shared log.
     This approach requires Eve to create a signature in the name of Alice because Bob will check if the claimed creator signed the shared log.
     However, this contradicts the assumptions:
@@ -222,8 +239,8 @@ Second, Eve could specify an existing monitor in the log.
 This passes the check if the claimed monitor is allowed to create logs.
 However, it requires Eve to create a signature in the name of the monitor which contradicts the assumptions.
 Either he needs access to the private signing key of the claimed monitor (insecure PKI) or he needs to break the signing algorithm (insecure algorithm).
-Both options are not feasible.
-The malicious data owner Eve can not introduce forged logs into the system.
+Both options are not feasible under the given assumptions.
+Thus, a malicious data owner Eve can not introduce forged logs into the system.
 
 \section{Performance}
 \label{sec:evaluation-perf}
@@ -239,41 +256,54 @@ This section aims to provide resilient measurements of those costs.
 The encryption times are measured for each library separately (ts-it-crypto, py-it-crypto and go-it-crypto).
 The measurements are implemented as performance tests in each library.
 All of them follow the same principles.
-The encryption duration are quantified by measuring the passed milliseconds during encryption.
+The encryption duration is quantified by measuring the passed milliseconds during encryption.
 Always the same log data is encrypted.
 However, the number of recipients changes during different tests.
 For a fixed number of recipients a tests is repeated $100$ times.
 The average of those runs is said to be the encryption duration for the number of recipients in the library under test.
-The performance tests were executed on a machine running \emph{macOS Monterey} with an \emph{Apple M1} CPU.
+
+The performance tests were executed on a machine running \emph{macOS Monterey} with an \emph{Apple M1} CPU (ARM64).
+The Go library was compiled with Go 1.18.3\footnote{\url{https://go.dev/doc/devel/release}}.
+The Typescript package was compiled to Javascript using TSC 4.8.3\footnote{\url{https://www.typescriptlang.org/docs/handbook/compiler-options.html}}. 
+It was then executed by the Node.js version 18.12.1\footnote{\url{https://nodejs.org/ca/blog/release/v18.12.1/}} which is built upon the V8 engine 10.2.154.15\footnote{\url{https://v8.dev/}}.
+The Python tests were run under Python 3.9.6\footnote{\url{https://www.python.org/downloads/release/python-396/}} using the CPython\footnote{\url{https://github.com/python/cpython}} interpreter.
 
 \subsection{Results}
-The results of all three libraries is illustrated in figure~\ref{fig:performance}.
+The results of all three libraries are illustrated in figure~\ref{fig:performance}.
 It shows the encryption duration in milliseconds for a different number of recipients.
 In general, one can observe that the Go implementation is the fastest library.
-This meets the expectations because Go is a compiled language while python is interpreted.
+This meets the expectations because Go is a compiled language while Python and Typescript are interpreted.
 Please note that Typescript is compiled into Javascript.
-The resulting Javascript code, however, is also interpreted.
+The resulting Javascript code, however, is also interpreted by the V8 engine included in Node.js.
+The performance difference between the Python and Typescript implementations is remarkable.
+Both rely on the native OpenSSL module installed on the operating system.
+Hence all complex cryptographic tasks are computed by pre-compiled libraries.
+This improves the performance of both libraries.
+The observed speed difference can be explained best when considering the performance differences between the Javascript engine V8 and the CPython interpreter:
+The experiments performed by~\cite{Lion2022} indicate that execution times under V8 are on average almost four times faster than under CPython.
 
 For all languages one can observe a linear growth of encryption times when adding additional recipients.
 This meets the expectations because all libraries rely on hybrid encryption.
 When adding a new user the encrypting party must additionally encrypt the secret key for this user.
 The encryption for a single receiver in Go takes $0.12ms$.
 The encryption for two receivers takes $0.17ms$.
-The additional receiver increases the costs by a about $0.05ms$ since both runs encrypted the same log.
-In Python and Typescript an additional recipient increases the costs by approximately $0.50ms$ and $0.30ms$.
+The additional receiver increases the costs by a about $0.05ms$ because both runs encrypted the same log.
+The same analysis can be done for the Python and Typescript measurements.
+While an additional recipient in Python increases the encryption costs by approximately $0.50ms$, the Typescript implementation requires about $0.30ms$ for an additional user.
 
-From the perspective of a user a system reacts instantaneously if a computation takes less than $100ms$~\cite{Nielson1993}.
+From the perspective of a user, a system reacts instantaneously if a computation takes less than $100ms$~\cite{Nielson1993}.
 In those cases no visual feedback is necessary.
-Experiments with the performance libraries show that this treshold is reached in Typescript if encrypting the log for about $330$ users.
+Experiments with the packages show that this treshold is reached in Typescript if encrypting the log for about $330$ users.
 The Python implementation reaches the boundary if data is encrypted for $170$ users.
 In Go the encryption for $1500$ recipients takes on average slightly more than $100ms$.
-This proofs that the implemented library can be used in practice.
+This proofs that a data owner can share his logs with up to 170 users without noticing a computation delay.
+Hence, the designed protocol can be used in practice.
 
 
 
 
 \begin{figure}[ht]
-    \includegraphics[scale=0.5]{../img/07/performance_tests.jpg}
+    \includegraphics[scale=0.3]{../img/07/performance_tests.jpg}
     \centering
     \caption[Encryption duration]{This figure visualizes the encryption duration of the different libraries in milliseconds. The same log data was encrypted for a different number of recipients.}
     \label{fig:performance}
