--- a/txt/5-protocol-design.tex
+++ b/txt/5-protocol-design.tex
@@ -7,7 +7,7 @@
 \label{chap:design}
 
 This chapter describes and justifies the protocol designed in the context of this thesis.
-The main purpose of the protocol is the secure encryption of logs in the toolchain.
+The main purpose of the protocol is the secure encryption of logs in the toolchain while adding the possibility to share them.
 In the previous chapter \ref{chap:overview}, possible encryption strategies were introduced and evaluated based on the identified system requirements (see chapter \ref{chap:requirements}).
 Hybrid encryption was identified as the most promising encryption technique.
 The evaluation of the protocol in terms of functionality, security, and performance can be found in chapter~\ref{chap:evaluation}.
@@ -25,9 +25,9 @@ Additionally, access to encrypted logs can be shared and revoked by the data own
 The protocol relies on an established PKI.
 Each user requires two key pairs.
 The first key pair is dedicated to encrypting data.
-Its public key is called encryption key while its private key is called decryption key.
+Its public key is called the encryption key while its private key is called the decryption key.
 The second key pair is intended to sign data.
-Its public key is called verification key while its private key is called signing key.
+Its public key is called the verification key while its private key is called the signing key.
 Public keys are represented by a PEM-encoded certificate which is signed by a trusted CA.
 Private keys are represented by a PEM-encoded private key.
 This separation of keys is considered to be the best practice in modern key management.~\todo{quelle}
@@ -86,7 +86,7 @@ To ensure that the monitor does not specify other unintended users, validation c
         Alice downloads and decrypts the log.
         Alice decides to share the log with Bob.
         Therefore, Alice re-encrypts the log and updates it in the Overseer.
-        Revoking Bob's access requires Alice to re-encrypt the log while not including Bob into the set of recipients.
+        Revoking Bob's access requires Alice to re-encrypt the log while not including Bob in the set of recipients.
     }
     \label{fig:protocol-overview}
 \end{figure}
@@ -102,20 +102,20 @@ Finally, section~\ref{sec:jose-protocol} illustrates how the \emph{JOSE} standar
 \subsection{Secure application of encryption and authentication}
 \label{sec:sign-and-encrypt}
 In general, the protocol sends encrypted data (containing a log) to a set of recipients.
-The recipients must verify the authenticity of the encrypted data because only the owner or the monitor of a log can encrypt.
+The recipients must verify the authenticity of the encrypted data because only the owner or the monitor of a log is allowed to encrypt it.
 Thus, the creator of an encrypted log is required to cryptographically sign the sent data.
-This arises the question, if encrypted data should be signed (\emph{encrypt-then-sign}) or if signed data should be encrypted (\emph{sign-then-encrypt}).
-In general, the \emph{encrypt-then-sign} approach is considered less secure because a malicious entity could simply stripe the signature and sign the ciphertext using its own secret key~\cite{Davis2001}.
+This arises the question, whether encrypted data should be signed (\emph{encrypt-then-sign}) or whether signed data should be encrypted (\emph{sign-then-encrypt}).
+In general, the \emph{encrypt-then-sign} approach is considered less secure because a malicious entity could simply stripe the signature and sign the ciphertext using its secret key~\cite{Davis2001}.
 This might lead to unintended flaws in the resulting protocol~\cite[section~11.2]{Jones2015a}.
 
 The naive \emph{sign-then-encrypt} approach, however, suffers from surreptitious forwarding in certain scenarios (details in section~\ref{sec:surreptitious-forwarding}).
 The use case of this protocol is affected by the flaw.
-Consider a log which is signed by the data owner indicating that he intentionally shared it.
+Consider a log that is signed by the data owner indicating that he intentionally shared it.
 This signed log is then encrypted for a set of users.
 Assume that a malicious user can decrypt the cipher because the data owner encrypted the log for him.
-Nothing prevents him from re-encrypting the singed log for any other users.
+Nothing prevents him from re-encrypting the signed log for any other users.
 The problem arises because those other users can not verify if the data owner has intended to share the log with them.
-They only know that the log was singed by the data owner.
+They only know that the log was signed by the data owner.
 
 This flaw can be mitigated by explicitly signing the intended recipients.
 This allows a recipient to ensure that the data was intentionally encrypted for him or her by the claimed creator.~\cite{Davis2001}
@@ -123,7 +123,7 @@ This allows a recipient to ensure that the data was intentionally encrypted for 
 For the protocol designed in the context of this thesis, those considerations have the following implications:
 \begin{enumerate}
     \item 
-    The creator of a encrypted log signs the log along with the set of recipients.
+    An encrypted log is singed by the creator along with the set of recipients.
     Please note that the log itself is also a signed data structure.
     The log must always be signed by the monitor specified within the log to avoid the forgery of logs (security requirement~S3).
     The signature of the creator ensures that unauthorized sharing operations can be detected (security requirement~S2).
@@ -139,7 +139,7 @@ For the protocol designed in the context of this thesis, those considerations ha
 \label{sec:metadata}
 The logs which are exchanged between users are always encrypted.
 This affects the performance of the toolchain.
-From the perspective of intermediate servers, a encrypted log does not provide any meaningful information.
+From the perspective of intermediate servers, an encrypted log does not provide any meaningful information.
 Specifically, they do not know which users have access to a log.
 The server can not associate users with a log.
 This introduces the following practical problems:
@@ -154,7 +154,7 @@ This introduces the following practical problems:
     \item 
     Consider Alice to be a data owner.
     Alice wants to share her log with Bob.
-    Before the sharing process starts, the encrypted log is stored in the server.
+    Before the sharing process starts, the encrypted log is stored on the server.
     Alice re-encrypts the log under the public key of Bob.
     She authenticates against the server and tries to update the stored log in the server.
     The server, however, does not know if Alice is the legitimate owner of the stored log (because it can not associate users with a log).
@@ -164,7 +164,7 @@ This introduces the following practical problems:
 \end{enumerate}
 To avoid these problems, the set of receivers and the identity of the data owner need to be accessible without decryption.
 This data can be interpreted as routing information and must be attached as metadata to the encrypted logs.
-This allows the server to filter logs which concern a particular user.
+This allows the server to filter logs concerning a particular user.
 Moreover, the server can allow data owners to modify encrypted logs.
 This practically allows them to share and revoke access to logs.
 This construction, however, implies that the data sent over the insecure network contains the set of recipients twice (once in the metadata and once within the encrypted data).
@@ -172,10 +172,10 @@ This construction, however, implies that the data sent over the insecure network
 \subsection{Realization via JOSE}
 \label{sec:jose-protocol}
 
-A log within the current inverse transparency toolchain is represented by a json object.
+A log within the current inverse transparency toolchain is represented by a JSON object.
 This motivates the usage of the \emph{JSON Object Signing and Encryption} standard (\emph{JOSE})~\cite{Barnes2014}.
 Details about it can be found in section~\ref{sec:jose}.
-The \emph{JOSE} standard can be used to cryptographically sign (\emph{JWS}) and encrypt (\emph{JWE}) json data.
+The \emph{JOSE} standard can be used to cryptographically sign (\emph{JWS}) and encrypt (\emph{JWE}) JSON data.
 It defines multiple algorithms which can be used.
 Specifically, \emph{JWE} tokens can be computed using hybrid encryption algorithms.
 Since \emph{JWS} and \emph{JWE} tokens can also be nested into each other, \emph{JOSE} cab be used to realize the desired protocol by the following means:
@@ -212,14 +212,14 @@ To create a \emph{JWS} token, the monitor requires access to its private signing
 A log is signed with the algorithm \verb|ES256| which relies on \verb|ECDSA| and \verb|SHA-256|.
 It is defined by the JSON Web Algorithm specification~\cite{Jones2015}.
 The log is later used as input for the encryption algorithm.
-This construction is intended to resolve security requirement S3 because allows users decrypting a log to verify if the provided log was indeed created by the claimed monitor.
+This construction is intended to resolve security requirement S3 because it allows decrypting users to verify if the provided log was indeed created by the claimed monitor.
 
 \section{Encrypting logs}\label{sec:encrypting}
 
 The encryption algorithm requires two input parameters: A log and the set of users who are allowed to access the log.
 It can be performed either by a monitor or the data owner.
 A monitor initially encrypts the log for the data owner.
-The monitor must not include its own identity into the set of authorized users.
+The monitor must not include its own identity in the set of authorized users.
 More specifically, the set of authorized users must only contain the data owner if a monitor initially encrypts a log.
 The data owner of the log might decide to share or revoke access to a log for users later on.
 This requires the re-encryption of the log.
@@ -232,7 +232,7 @@ It is called a shared log because it contains a nested log plus the set of recip
 The latter allows a decrypting user to download the public key of the creator which is used to verify the shared log.
 The set of recipients is included to mitigate surreptitious forwarding.
 This construction is intended to resolve security requirement S2.
-It allows to verify a receiver if the data owner has intended to share the log with him or her.
+It allows the verification if the data owner has intended to share the log with respective receiver.
  
 Once the  shared log is created, it is used to compute the final \emph{JWE} token.
 This follows the \emph{sign-then-encrypt} approach elaborated in section~\ref{sec:sign-and-encrypt}.
@@ -241,8 +241,8 @@ The identities of recipients and the identity of the owner are passed as metadat
 The choice of used algorithms to encrypt the data implies hybrid encryption:
 The plaintext is encrypted with the authenticated encryption algorithm \verb|A256GCM| (symmetric encryption via 256-bit AES in Galois/Counter Mode).
 The applied key-wrapping algorithm is \verb|ECDH-ES+A256KW|.
-It is responsible computing encrypted keys.
-For each user specified as valid recipient, the symmetric key is encrypted under the public encryption key of the user (asymmetric encryption).
+It is responsible for computing encrypted keys.
+For each user specified as a valid recipient, the symmetric key is encrypted under the public encryption key of the user (asymmetric encryption).
 This algorithm establishes a Diffie-Hellman secret between the creator and recipient.
 This DH-secret is finally used to encrypt the symmetric key using AES.
 Details about this approach can be found in \cite[100]{Barker2017}.
