--- a/txt/6-implemented-libraries.tex
+++ b/txt/6-implemented-libraries.tex
@@ -41,7 +41,7 @@ This aims to improve the maintainability of the source code.
 As a result, all three libraries expose the same interface to users.
 This interface is highly related to the algorithms described in chapter~\ref{chap:design}.
 The designed protocol relies on the \emph{JOSE} standard.
-Thus, each library depends on an implementation of the standard.
+Thus, each library depends on a third-party package implementing \emph{JOSE}.
 Ts-it-crypto depends on the Typescript package \emph{jose}\footnote{\url{https://www.npmjs.com/package/jose}}.
 Py-it-crypto depends on the Python package \emph{jwcrypto}\footnote{\url{https://pypi.org/project/jwcrypto/}}.
 Go-it-crypto depends on the Go package \emph{jose}\footnote{\url{https://pkg.go.dev/gopkg.in/square/go-jose.v2}}.
@@ -50,12 +50,12 @@ Go-it-crypto depends on the Go package \emph{jose}\footnote{\url{https://pkg.go.
 
 This section describes the usage of the implemented libraries in general.
 Please also refer to the pseudocode depicted in listing~\ref{lst:pseudocode}.
-If you are interested in the concrete realization in a specific language have a look at the corresponding github repositories.
+If you are interested in the concrete realization in a specific language have a look at the corresponding Github repositories.
 
 To make use of the library an instance of type \verb|ItCrypto| must be instantiated.
 This instantiation requires the function \verb|fetchUser|.
 It resolves an identity of a user (which is a \verb|string|) to an instance of type \verb|RemoteUser|.
-The function usually requests a server which can resolve the identity of a user to its public keys.
+The function usually requests a server resolving the identity of a user to its public keys.
 It needs to implement the following signature: \verb|RemoteUser fetchUser(string)|.
 A \verb|RemoteUser| object stores the public keys of the user along with its identity and the information if the user is a trusted monitor.
 This information is mainly used during decryption to verify if the signed data is valid.
@@ -79,7 +79,7 @@ The logged-in user can create, encrypt and decrypt logs using the provided keys.
 \begin{lstlisting}[basicstyle=\small, label=lst:pseudocode,float,floatplacement=tbp, language=Java, caption={[Pseudocode library usage]Pseudocode of creating, encrypting and decrypting logs using the provided libraries.}, morekeywords={RemoteUser, var, assert}, commentstyle=\color{codegreen}]
 RemoteUser fetchUser(string identity){
     /*
-    Fetch keys from the server and check if user 
+    Fetch keys from the server and check if a user 
     is a trusted monitor.
     */
     return importRemoteUser(
@@ -177,7 +177,7 @@ As described in section~\ref{sec:overview}, the protocol assumes an externally e
 Each user is assigned two key pairs (one for signing and one for encrypting data).
 The private keys are assumed to be PEM-encoded.
 Public keys are assumed to be PEM-encoded certificates that are signed by a trusted certificate authority.
-Whenever a user is imported, the certificates of the user are assumed to be singed by this certificate authority.
+Whenever a user is imported, the certificates of the user are assumed to be signed by this certificate authority.
 Currently, the libraries only support elliptic curve cryptography.
 The elliptic curve OpenSSL parameters \verb|prime256v1| are known to work in all three implementations.
 
@@ -208,45 +208,45 @@ They provide details about the implemented changes.
 The toolchain relies on a single-sign-on server responsible for authenticating users.
 The development environment provides the \emph{Revolori} server which is an implementation of this service.
 Besides the user information it now additionally stores certificates containing the public keys of the users and the information if a user is an authorized monitor.
-This additional information is used by the frontend to encrypt and decrypt logs.
-Therefore, a new endpoint was introduced which resolves the identity to this information (e.g. the certificates and if the user is a trusted monitor).
+This additional information is used by the front-end to encrypt and decrypt logs.
+Therefore, a new endpoint was introduced which resolves the identity of this information (e.g. the certificates and if the user is a trusted monitor).
 
 The development environment of the toolchain is a proof-of-concept that shows how an external PKI can be connected.
-There are two scripts used in order to load pre-configured users into the development environment.
+There are two scripts used to load pre-configured users into the development environment.
 Both were updated to establish an exemplary PKI:
 
 \begin{itemize}
     \item 
     The script \verb|prebuild.sh| is responsible for creating a key pair for the \emph{Revolori} server.
     It is used to sign access tokens.
-    The public key is passed to the \emph{Overseer} because it needs to verify if a provided token was singed by the \emph{Revolori} single-sign-on-server.
+    The public key is passed to the \emph{Overseer} because it needs to verify if a provided token was signed by the \emph{Revolori} single-sign-on-server.
     
-    The script was adopted to create a key pair for a exemplary certificate authority.
+    The script was adopted to create a key pair for an exemplary certificate authority.
     Moreover, the script expects a file \verb|users.json| which contains the pre-configured user data.
     Two key pairs for each user are generated.
     The public keys of all users are signed by the public key of the certificate authority.
     This effectively creates certificates binding the identities of the users to their public keys.
-    Finally the script updates the provided \verb|users.json| to contain the cryptographic keys of each user.
+    Finally, the script updates the provided \verb|users.json| to contain the cryptographic keys of each user.
     \item 
     The script \verb|setup.sh| is responsible for creating users in a running \emph{Revolori} instance.
     It is also used to create exemplary data accesses for each user.
     Thus, the script had to be adopted to support encrypted logs.
     First of all, the script expects the file \verb|users.json| which contains user information along with their cryptographic keys.
     It then parses the user information and creates the respective users in the \emph{Revolori} server.
-    In particular, this includes the certificates of the users public keys.
+    In particular, this includes the certificates of the user's public keys.
     To pre-compute encrypted logs the \emph{CLI} of the \emph{ts-it-crypto} library needs to be installed.
-    It allows to encrypt log data in the name of a monitor.
+    It allows encrypting log data in the name of a monitor.
     The encrypted logs are then uploaded to the \emph{Overseer}.
 
 \end{itemize}
 
-This setup allows to fetch the public keys for a given user from the \emph{Revolori} server.
+This setup allows fetching the public keys for a given user from the \emph{Revolori} server.
 The development environment also provides the private keys for a user upon login.
 This is realized by passing the \verb|users.json| file to the \emph{Clotilde} process.
-Please note that this implies that the frontend has unrestricted access to all private keys.
+Please note that this implies that the front-end has unrestricted access to all private keys.
 Thus, this setup can only be used in the development environment.
-In productive systems the \emph{Clotilde} frontend must securely import the private keys from the user (e.g. via hardware token).
-If a user logs in to the system, the frontend instantiates a \verb|ItCrypto| object using the provided key material.
+In productive systems, the \emph{Clotilde} front-end must securely import the private keys from the user (e.g. via hardware token).
+If a user logs in to the system, the front-end instantiates an \verb|ItCrypto| object using the provided key material.
 This finally enables all cryptographic tasks.
 
 
