--- a/literature.bib
+++ b/literature.bib
@@ -514,6 +514,70 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   eprint    = {https://www.usenix.org/conference/atc22/presentation/lion},
 }
 
+@InCollection{Schallmo2016,
+  author    = {Schallmo, Daniel RA},
+  booktitle = {Jetzt digital transformieren},
+  publisher = {Springer},
+  title     = {Digitale Transformation von Gesch{\"a}ftsmodellen},
+  year      = {2016},
+  pages     = {3--8},
+  eprint    = {https://doi.org/10.1007/978-3-658-14569-9_2},
+}
+
+@Article{Boes2022,
+  author = {Boes, Andreas and Hess, Thomas and Pretschner, Alexander and K{\"a}mpf, Tobias and Vogl, Elisabeth},
+  title  = {Daten--Innovation--Privatheit--Mit Inverser Transparenz das Gestaltungsdilemma der digitalen Arbeitswelt l{\"o}sen},
+  year   = {2022},
+  eprint = {https://mediatum.ub.tum.de/doc/1660231/document.pdf},
+}
+
+@InProceedings{Waters2004,
+  author    = {Waters, Brent R and Balfanz, Dirk and Durfee, Glenn and Smetters, Diana K},
+  booktitle = {NDSS},
+  title     = {Building an encrypted and searchable audit log.},
+  year      = {2004},
+  pages     = {5--6},
+  volume    = {4},
+}
+
+@TechReport{Rescorla2000,
+  author = {Rescorla, Eric},
+  title  = {HTTP over TLS},
+  year   = {2000},
+  eprint = {https://www.rfc-editor.org/rfc/rfc2818},
+}
+
+@Misc{Weber2021,
+  author       = {Anja Weber},
+  howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+  month        = jun,
+  note         = {Accessed: 2010-09-30},
+  title        = {Nutzung von Cloud-Computing steigt im Corona-Jahr},
+  year         = {2021},
+  eprint       = {https://www.bitkom-research.de/de/pressemitteilung/nutzung-von-cloud-computing-steigt-im-corona-jahr},
+}
+
+@InProceedings{Greschbach2012,
+  author    = {Greschbach, Benjamin and Kreitz, Gunnar and Buchegger, Sonja},
+  booktitle = {2012 IEEE International Conference on Pervasive Computing and Communications Workshops},
+  title     = {The devil is in the metadata — New privacy challenges in Decentralised Online Social Networks},
+  year      = {2012},
+  pages     = {333-339},
+  eprint    = {https://doi.org/10.1109/PerComW.2012.6197506},
+}
+
+@Article{Mayer2016,
+  author   = {Jonathan Mayer and Patrick Mutchler and John C. Mitchell},
+  journal  = {Proceedings of the National Academy of Sciences},
+  title    = {Evaluating the privacy properties of telephone metadata},
+  year     = {2016},
+  number   = {20},
+  pages    = {5536-5541},
+  volume   = {113},
+  abstract = {Since 2013, a stream of disclosures has prompted reconsideration of surveillance law and policy. One of the most controversial principles, both in the United States and abroad, is that communications metadata receives substantially less protection than communications content. Several nations currently collect telephone metadata in bulk, including on their own citizens. In this paper, we attempt to shed light on the privacy properties of telephone metadata. Using a crowdsourcing methodology, we demonstrate that telephone metadata is densely interconnected, can trivially be reidentified, and can be used to draw sensitive inferences.},
+  eprint   = {https://www.pnas.org/doi/pdf/10.1073/pnas.1508081113},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
